manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-app
spec:
  selector:
    app: training-app
  ports:
    - port: 80
      targetPort: 8080
